--- a/Boxed/Base.lproj/Main.storyboard
+++ b/Boxed/Base.lproj/Main.storyboard
@@ -2253,7 +2253,7 @@
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="14" id="68C-DM-Oc4"/>
                                         </constraints>
                                         <textFieldCell key="cell" title="When the menu bar icon is hidden, relaunch Boxed from Finder to open." id="rpe-Sl-5wN">
-                                            <font key="font" metaFont="message" size="11"/>
+                                            <font key="font" metaFont="label" size="11"/>
                                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
@@ -2274,7 +2274,7 @@
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="14" id="rEL-Tx-amT"/>
                                         </constraints>
                                         <textFieldCell key="cell" title="If you repeat move or half actions, the window will move to the next display instead of 1/2, 2/3, and 1/3 size." id="O6l-cD-G4A">
-                                            <font key="font" metaFont="message" size="11"/>
+                                            <font key="font" metaFont="label" size="11"/>
                                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
@@ -2374,6 +2374,16 @@
                             <constraint firstItem="nQ2-iv-93L" firstAttribute="leading" secondItem="twn-v6-bTU" secondAttribute="leading" constant="20" symbolic="YES" id="xzZ-NQ-vh3"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="allowAnyShortcutCheckbox" destination="V1k-us-elJ" id="fjf-Km-ZYw"/>
+                        <outlet property="checkForUpdatesAutomaticallyCheckbox" destination="EE4-h1-zfa" id="C6U-vF-yEF"/>
+                        <outlet property="checkForUpdatesButton" destination="qtR-68-Cvc" id="Ion-2f-2z3"/>
+                        <outlet property="hideMenuBarIconCheckbox" destination="5iI-sE-EUA" id="A6h-AB-QoT"/>
+                        <outlet property="launchOnLoginCheckbox" destination="wT1-CA-qTh" id="mMj-7U-ob9"/>
+                        <outlet property="subsequentExecutionCheckbox" destination="eKB-7L-LFh" id="KZ8-tl-WfP"/>
+                        <outlet property="versionLabel" destination="rFA-Nv-8q4" id="Kjm-vq-dkM"/>
+                        <outlet property="windowSnappingCheckbox" destination="hog-en-bgA" id="jLU-S2-k4q"/>
+                    </connections>
                 </viewController>
                 <customObject id="5fV-wG-MG8" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -2485,7 +2495,7 @@ DQ
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aYy-95-hZh">
                                         <rect key="frame" x="-2" y="50" width="254" height="28"/>
                                         <textFieldCell key="cell" alignment="center" title="Spectacle shortcuts are more likely to conflict with other shortcuts" id="wzX-Ev-GCB">
-                                            <font key="font" metaFont="message" size="11"/>
+                                            <font key="font" metaFont="label" size="11"/>
                                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
@@ -2493,7 +2503,7 @@ DQ
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fFs-To-sai">
                                         <rect key="frame" x="-2" y="0.0" width="254" height="28"/>
                                         <textFieldCell key="cell" alignment="center" title="Choosing Spectacle will also cycle 1/2, 2/3, and 1/3 window widths on repeated shortcuts" id="ksD-Ve-dzy">
-                                            <font key="font" metaFont="message" size="11"/>
+                                            <font key="font" metaFont="label" size="11"/>
                                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
@@ -2569,7 +2579,7 @@ DQ
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="wHy-la-Yb5">
                                         <rect key="frame" x="-2" y="137" width="254" height="28"/>
                                         <textFieldCell key="cell" alignment="center" title="Go to System Preferences → Security &amp; Privacy → Privacy → Accessibility" id="3We-DQ-daT">
-                                            <font key="font" metaFont="message" size="11"/>
+                                            <font key="font" metaFont="label" size="11"/>
                                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
